# manuscript-intel

./: .gitignore  README.md  SESSION-NOTES.md  app.go  go.mod  main.go  patch_search_icon.py  wails.json
.cursor/rules/: rust-backend-vue-ui.mdc
frontend/: index.html  package.json
frontend/src/: main.js  style.css
info/: token-usage.md
internal/cdp/: cdp.go
internal/rocket/: service.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: bisac-fiction.json  genre-kdp-map.json  genre-list.json  lookup-config.json  prompt-templates.json  provider-models.json  zeigarnik-config.json
src-tauri/icons/: icon.icns
src-tauri/src/: cancel.rs  canopy.rs  category_finder.rs  cdp.rs  commands.rs  competition_analyzer.rs  dataforseo.rs  db.rs  folder_structure.rs  genre_analyzer.rs  genre_taxonomy.rs  keyword_search.rs  lib.rs  main.rs  models.rs  pr_scraper.rs  prompts.rs  series.rs  stories.rs  winningcat.rs
src-tauri/src/analysis/: ai_isms.rs  bisac.rs  categories.rs  chapters.rs  continuity.rs  genres.rs  keywords.rs  mod.rs  pipeline.rs  show_dont_tell.rs  zeigarnik.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
ui/src/: App.vue  formatMarkdown.ts  injectionKeys.ts  main.js  main.ts  reportRenderer.ts  style.css  types.ts
ui/src/components/: AiChat.vue  AnalyzerPanel.vue  ChapterEditor.vue  FileTreeNodes.vue  LogStream.vue  ManuscriptViewer.vue  NewDocumentForm.vue  ReportsViewer.vue  SeriesForm.vue  SeriesPanel.vue  SettingsPanel.vue  Sidebar.vue  StoryForm.vue  TitleBar.vue  WritingPanel.vue
ui/src/composables/: useAnalysis.ts  usePlatform.ts  useReportTypes.ts  useReports.ts  useSeries.ts  useSettings.ts  useStories.ts
