[package]
name = "pub-rocket-reader"
version = "0.1.0"
description = "Publisher Rocket Reader — automates Publisher Rocket via CDP"
authors = ["David Allen Norris"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pub_rocket_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
libc = "0.2"
chrono = "0.4"
log = "0.4"
